--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,28 @@
     <artifactId>git-proxy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>git-proxy</name>
-    <description>git proxy</description>
+    <description>Git Proxy用于代理Git操作</description>
+    <organization>
+        <name>NanCheung</name>
+        <url>https://blog.nancheung.com</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>NanCheung</id>
+            <name>Nan Cheung</name>
+            <email>i@nancheung.com</email>
+            <roles>
+                <role>Project lead</role>
+            </roles>
+        </developer>
+    </developers>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
+        <dependency> <!--工具库-->
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.2.4</version>
@@ -40,7 +54,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
+            <exclusions> <!--junit-vintage-engine用于运行JUnit 4测试-->
                 <exclusion>
                     <groupId>org.junit.vintage</groupId>
                     <artifactId>junit-vintage-engine</artifactId>
@@ -54,6 +68,31 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>public</id>
+            <name>aliyun public</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring</id>
+            <name>aliyun spring</name>
+            <url>https://maven.aliyun.com/repository/spring</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
