:wrench::loud_sound: refactor(log): 新增日志输出和彩色日志

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ git-proxy:
       time: 10
       unit: seconds
 
+spring:
+  output:
+    ansi:
+      enabled: detect
+
 logging:
   level:
-    com.nancheung.gitproxy.runner: debug
+    com.nancheung.gitproxy.task: debug
