:sparkles::white_check_mark::wrench: feat(GitService): git clone操作放入异步队列
由线程池控制，超过限制则抛出异常

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 git-proxy:
   auto-clean-strategy:
     zip-file:
-      time: 1
-      unit: hours
+      time: 10
+      unit: seconds
     temp-dir:
       time: 10
       unit: seconds
@@ -14,4 +14,4 @@ spring:
 
 logging:
   level:
-    com.nancheung.gitproxy.task: debug
+    com.nancheung.gitproxy: debug
