:sparkles::wrench: feat(controller): 新增统一返回体，统一api返回格式
新增json序列化规则：不序列化为null的字段

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ git-proxy:
       unit: seconds
 
 spring:
+  jackson:
+    default-property-inclusion: non_null
   output:
     ansi:
       enabled: detect
