--- a/git-proxy-api/pom.xml
+++ b/git-proxy-api/pom.xml
@@ -24,5 +24,11 @@
             <groupId>com.nancheung</groupId>
             <artifactId>git-proxy-common-swagger</artifactId>
         </dependency>
+
+        <!--validation-->
+        <dependency><!--hibernate-validator-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
