--- a/git-proxy-common/git-proxy-common-core/pom.xml
+++ b/git-proxy-common/git-proxy-common-core/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>git-proxy-common-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+    </dependencies>
 </project>
