:heavy_plus_sign: feat(git-proxy-common): 新增git-proxy-common-restful模块，实现restful风格api
1. 移动ApiResult、ValidationExceptionEnum类到restful模块
2. git-proxy-api-git新增restful模块的依赖

--- a/git-proxy-api/pom.xml
+++ b/git-proxy-api/pom.xml
@@ -24,6 +24,10 @@
             <groupId>com.nancheung</groupId>
             <artifactId>git-proxy-common-swagger</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nancheung</groupId>
+            <artifactId>git-proxy-common-restful</artifactId>
+        </dependency>
 
         <!--validation-->
         <dependency><!--hibernate-validator-->
