:pushpin: build(all pom): 优化maven依赖
1. 调整各common包的依赖
2. 加入springboot的打包功能
3. 指定项目编码为UTF-8

--- a/git-proxy-api/pom.xml
+++ b/git-proxy-api/pom.xml
@@ -16,6 +16,7 @@
     </modules>
 
     <dependencies>
+        <!--git-proxy-common包-->
         <dependency>
             <groupId>com.nancheung</groupId>
             <artifactId>git-proxy-common-core</artifactId>
@@ -29,10 +30,29 @@
             <artifactId>git-proxy-common-restful</artifactId>
         </dependency>
 
+        <!--数据源-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency><!--MybatisPlus-->
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
         <!--validation-->
         <dependency><!--hibernate-validator-->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
