--- a/git-proxy-common/git-proxy-common-restful/pom.xml
+++ b/git-proxy-common/git-proxy-common-restful/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>git-proxy-common</artifactId>
         <groupId>com.nancheung</groupId>
+        <artifactId>git-proxy-common</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,11 +12,20 @@
     <artifactId>git-proxy-common-restful</artifactId>
 
     <dependencies>
-        <dependency>
+        <dependency><!--核心集成-->
             <groupId>com.nancheung</groupId>
             <artifactId>git-proxy-common-core</artifactId>
         </dependency>
-    </dependencies>
 
+        <dependency><!--swagger注解-->
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
