--- a/git-proxy-common/git-proxy-common-swagger/pom.xml
+++ b/git-proxy-common/git-proxy-common-swagger/pom.xml
@@ -17,14 +17,10 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.version}</version>
         </dependency>
-        <dependency><!---->
+        <dependency><!--swagger ui模块-->
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-ui</artifactId>
             <version>${knife4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 </project>
