--- a/git-proxy-common/pom.xml
+++ b/git-proxy-common/pom.xml
@@ -15,6 +15,13 @@
         <module>git-proxy-common-swagger</module>
         <module>git-proxy-common-core</module>
         <module>git-proxy-common-restful</module>
+        <module>git-proxy-common-rbac</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
 </project>
