:boom: chore(yml): 修改启动端口为7920
git在字母表中的顺序分别对应7，9，20

--- a/git-proxy-api/git-proxy-api-git/src/main/resources/config/application.yml
+++ b/git-proxy-api/git-proxy-api-git/src/main/resources/config/application.yml
@@ -12,6 +12,9 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+server:
+  port: 7920
+
 mybatis-plus:
   global-config:
     banner: false
